--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,53 @@
 .App {
   text-align: center;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-header,
+.App-main {
+  box-sizing: border-box;
+  padding: 1em;
+  display: flex;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+  height: 100vh;
+  width: 380px;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  font-size: 1.25em;
   color: white;
 }
 
+.App-logo {
+  width: 25vmin;
+  max-width: 360px;
+  pointer-events: none;
+}
+.App-title {
+  transform: translateY(-2vh);
+  text-shadow: 1px 1px 2px white;
+}
+
 .App-title span {
-  /* display: flex; */
   font-weight: normal;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.App-footer {
+  display: flex;
+  flex-direction: row;
+}
+
+.App-footer * {
+  margin: 0.25em;
 }
 
 @keyframes App-logo-spin {
@@ -39,5 +56,11 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
   }
 }
