--- a/src/App.css
+++ b/src/App.css
@@ -65,21 +65,19 @@
 }
 
 .icon-on-hover .show-on-hover {
-  display: none!important;
+  display: inline-block;
+  opacity: 0;
   position: absolute;
-  transform: translate(0.25em, -0.3em);
+  transition: opacity 0.3s ease-in-out;
 }
 
 .icon-on-hover .show-on-hover svg {
-  color: #fff;
-  background-color: #282c34;
-  border-radius: 1em;
   margin: auto 0.2em;
-  padding: 0.2em;
+  padding: 0 0.2em;
 }
 
 .icon-on-hover:hover .show-on-hover {
-  display: inline-block!important;
+  opacity: 1;
 }
 
 .App-edit-form {
