Cleaning before merge

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/**
+* MAIN LAYOUT
+**/
+
 .App {
   text-align: center;
   width: 100vw;
@@ -50,6 +54,11 @@
   margin: 0.25em;
 }
 
+
+/**
+* SPECIFIC SECTIONS
+**/
+
 .App-account-header {
   display: flex;
   justify-content: space-between;
@@ -85,6 +94,11 @@
   display: flex;
 }
 
+
+/**
+* ANIMATIONS
+**/
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -94,6 +108,10 @@
   }
 }
 
+
+/**
+* MEDIA QUERIES
+**/
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
