--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
   display: flex;
   flex-direction: row;
   box-sizing: border-box;
-  /* overflow: hidden; */
 }
 
 .App-header,
@@ -20,7 +19,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0a2e34;
   height: 100%;
   width: 360px;
   flex-direction: column;
@@ -61,7 +60,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #fb0;
 }
 
 .App-main {
@@ -97,10 +96,13 @@
 }
 
 .icon-on-hover .show-on-hover {
-  display: inline-block;
   opacity: 0;
   position: absolute;
+  display: flex;
   transition: opacity 0.3s ease-in-out;
+  background: rgba(255, 255, 255, 0.75);
+  padding: 0.4em 0.2em;
+  border-radius: 4px;
 }
 
 .icon-on-hover .show-on-hover svg {
